[gd_scene load_steps=4 format=3 uid="uid://copkxn0y1rctd"]

[ext_resource type="Script" uid="uid://d0o5v8d1at4aw" path="res://scripts/menu_screen.gd" id="1_3kcfb"]
[ext_resource type="PackedScene" uid="uid://tmvhsvwnvkx6" path="res://scenes/button.tscn" id="1_ep2em"]
[ext_resource type="Texture2D" uid="uid://bonukes8qqi10" path="res://assets/Logo.png" id="2_2ucu0"]

[node name="MenuScreen" type="Node2D"]
script = ExtResource("1_3kcfb")

[node name="EasterEggButton" type="Button" parent="."]
offset_left = 50.0
offset_top = 50.0
offset_right = 305.0
offset_bottom = 305.0
focus_mode = 0
flat = true

[node name="Logo" type="TextureRect" parent="EasterEggButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_2ucu0")
expand_mode = 3

[node name="StartButton" parent="." instance=ExtResource("1_ep2em")]
z_index = 1
offset_left = 105.0
offset_top = 340.0
offset_right = 255.0
offset_bottom = 400.0

[node name="RichTextLabel" parent="StartButton" index="1"]
text = "Zacznij sesję"

[node name="LibraryButton" parent="." instance=ExtResource("1_ep2em")]
z_index = 1
offset_left = 105.0
offset_top = 400.0
offset_right = 255.0
offset_bottom = 460.0

[node name="RichTextLabel" parent="LibraryButton" index="1"]
text = "Biblioteka"

[node name="OptionsButton" parent="." instance=ExtResource("1_ep2em")]
z_index = 1
offset_left = 105.0
offset_top = 460.0
offset_right = 255.0
offset_bottom = 520.0

[node name="RichTextLabel" parent="OptionsButton" index="1"]
text = "Opcje"

[node name="ExitButton" parent="." instance=ExtResource("1_ep2em")]
z_index = 1
offset_left = 105.0
offset_top = 520.0
offset_right = 255.0
offset_bottom = 580.0

[node name="RichTextLabel" parent="ExitButton" index="1"]
text = "Wyjście"

[connection signal="pressed" from="EasterEggButton" to="." method="_on_easter_egg_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="LibraryButton" to="." method="_on_library_button_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]

[editable path="StartButton"]
[editable path="LibraryButton"]
[editable path="OptionsButton"]
[editable path="ExitButton"]
